--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "sosata",
-  "version": "1.0.0",
-  "description": "MPD Client app, with 'komponist' as server",
-  "main": "index.js",
+  "name": "sosata1",
+  "version": "0.1.0",
+  "private": true,
+  "devDependencies": {
+    "jquery-mockjax": "^2.2.1",
+    "mock-fetch-api": "^1.0.7",
+    "react-scripts": "^0.9.5"
+  },
+  "dependencies": {
+    "babel-plugin-react-css-modules": "^1.2.0",
+    "history": "^4.6.1",
+    "jquery": "^3.1.1",
+    "material-ui": "^0.16.6",
+    "mock-audio-element": "0.0.0-beta.2",
+    "path": "^0.12.7",
+    "pubsub-js": "^1.5.4",
+    "querystring": "^0.2.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.1",
+    "react-router-dom": "^4.0.0",
+    "react-tap-event-plugin": "^2.0.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mutantcornholio/sosata.git"
-  },
-  "author": "cornholio <mutantcornholio@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mutantcornholio/sosata/issues"
-  },
-  "homepage": "https://github.com/mutantcornholio/sosata"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
