--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "fetch-mock": "^5.10.0",
     "jquery-mockjax": "^2.2.1",
+    "mock-audio-element": "0.0.0-beta.2",
     "mock-fetch-api": "^1.0.7",
     "react-scripts": "^0.9.5"
   },
